2048-app/kustomize.yml/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-2048
  annotations:
    cert-manager.io/cluster-issuer: issuer
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - 2048-app.youcefderder.co.uk
    secretName: tls-2048-app
  rules:
  - host: 2048-app.youcefderder.co.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-2048
            port:
              number: 80
